=== 0.1.5 (Next Release)

* Raise specialized configuration and SOAP errors - @dblock.
* Added <tt>TaxCloud::Client.ping</tt> - @dblock.
* Returning a verified <tt>TaxCloud::Address</tt> from <tt>TaxCloud::Address.verify</tt> - @dblock.
* Returning a <tt>TaxCloud::Responses::Lookup</tt> from <tt>TaxCloud::Transaction.lookup</tt> - @dblock.
* Returning transaction state, ie. <tt>"OK"</tt> from all other TaxCloud transactions. Exceptions are raised on error.
* Added support for tax codes and tax code groups lookup with <tt>TaxCloud::TaxCodes</tt> and <tt>TaxCloud::TaxCode::Groups</tt>.
* Fixed compatibility with Ruby 1.8.7 and 1.9.3, removed super from constructors for classes which inherit from <tt>Object</tt> - @gfmurphy.

=== 0.1.4 (10/20/2011)

* Upgraded rdoc - @drewtempelmeyer.
* Fixed <tt>.gemspec</tt> dependency declaration for savon - @drewtempelmeyer.

=== 0.1.3 (9/19/2011)

* Added support for the "returned" request - @danielmorrison.
* Refactoreted tests to use vcr and webmock - @danielmorrison.

=== 0.1.0 (8/23/2011)

* Initial public release - @drewtempelmeyer.